tests/fixtures/invalid/pow_str_bytes_bool.py
# Cannot call pow() with Str, Bytes, Bool
x = pow("hello", b"hello", True)
